--- a/languages/en.lang
+++ b/languages/en.lang
@@ -68,7 +68,7 @@ handleCommand.permssionNotEnough=You have no permission to use command "%1" beca
 handleCommand.cantSetMessageReaction=Having some unexpected error at setMessageReaction, error: %1
 handleCommand.executeCommand=[ %1 ] Command used: %2 by user: %3 at thread: %4 | Args included: %5 | Processing time: %6ms
 handleCommand.commandError=Having some unexpected error when using command %1, error: %2
-handleCommand.cooldowns=⏱ You are in the waiting time to use this command, please come back after %1s
+handleCommand.cooldowns=⏱ | You are in the waiting time to use this command, please come back later
 
 # includes/handle/handleCommandEvent.js
 
